--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
@@ -174,11 +174,11 @@
                         </AnchorPane>
                      </content>
                   </Tab>
-                <Tab fx:id="tab_producto" disable="true" text="Productos específicos">
+                <Tab fx:id="tab_producto" text="Productos específicos">
                      <content>
                         <AnchorPane fx:id="pane_producto" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Button layoutX="450.0" layoutY="30.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="Agregar">
+                              <Button layoutX="450.0" layoutY="30.0" mnemonicParsing="false" onAction="#agregar_instancias_producto" prefHeight="40.0" prefWidth="125.0" text="Agregar">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
