--- a/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
+++ b/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.DocumentosDeVentaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.DocumentosDeVentaController">
    <children>
       <AnchorPane layoutX="63.0" layoutY="63.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -109,109 +109,105 @@
             </AnchorPane>
             <AnchorPane layoutY="51.0" prefHeight="522.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <Line endX="600.0" layoutX="127.0" layoutY="175.0" startX="-100.0" stroke="#daa3a3a3" AnchorPane.topAnchor="170.0" />
-                  <Label layoutX="14.0" layoutY="5.0" text="Fecha de Emisión:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="14.0" layoutY="58.0" text="D.N.I.:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="71.0" layoutY="56.0" prefHeight="25.0" prefWidth="120.0" />
-                  <CheckBox layoutX="14.0" layoutY="34.0" mnemonicParsing="false" text="Boleta" />
-                  <CheckBox layoutX="14.0" layoutY="85.0" mnemonicParsing="false" text="Factura" />
-                  <Label layoutX="13.0" layoutY="106.0" text="R.U.C.:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="72.0" layoutY="104.0" prefHeight="25.0" prefWidth="120.0" />
-                  <Label layoutX="203.0" layoutY="107.0" text="Razón Social:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="304.0" layoutY="106.0" prefHeight="25.0" prefWidth="353.0" />
                   <Label layoutX="14.0" layoutY="189.0">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <DatePicker editable="false" layoutX="148.0" layoutY="3.0" />
-                  <Label layoutX="203.0" layoutY="60.0" text="Señor:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="305.0" layoutY="58.0" prefHeight="25.0" prefWidth="353.0" />
-                  <Label layoutX="361.0" layoutY="5.0" text="Tipo de Moneda:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="482.0" layoutY="3.0" prefHeight="25.0" prefWidth="120.0" />
-                  <Label layoutX="12.0" layoutY="139.0" text="Dir. Facturación:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField layoutX="119.0" layoutY="136.0" prefHeight="25.0" prefWidth="604.0" />
-                  <TableView layoutX="12.0" layoutY="176.0" prefHeight="177.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="174.0">
+                  <TableView layoutX="12.0" layoutY="192.0" prefHeight="162.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="192.0">
                     <columns>
-                      <TableColumn prefWidth="62.0" text="Cant." />
-                        <TableColumn prefWidth="97.0" text="Unidad Medida" />
-                        <TableColumn prefWidth="62.66668701171875" text="Código" />
-                        <TableColumn prefWidth="219.33331298828125" text="Descripción" />
+                      <TableColumn prefWidth="86.0" text="Cantidad" />
+                        <TableColumn prefWidth="77.0" text="Código" />
+                        <TableColumn prefWidth="182.0" text="Descripción" />
                         <TableColumn prefWidth="55.33331298828125" text="P.U." />
                         <TableColumn prefWidth="97.66668701171875" text="Descuentos" />
-                        <TableColumn prefWidth="125.0" text="Importe de Venta" />
+                        <TableColumn prefWidth="125.0" text="flete" />
+                        <TableColumn prefWidth="97.0" text="Subtotal" />
                     </columns>
                   </TableView>
-                  <Label layoutX="402.0" layoutY="368.0" text="SubTotal Ventas:">
+                  <Label layoutX="12.0" layoutY="374.0" text="SubTotal Ventas:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="395.0" text="Valor Venta:">
+                  <Label layoutX="12.0" layoutY="415.0" text="Valor Venta:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="422.0" text="IGV">
+                  <Label layoutX="402.0" layoutY="374.0" text="IGV">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="449.0" text="Otro Cargos:">
+                  <Label layoutX="402.0" layoutY="415.0" text="Importe Total:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="476.0" text="Otros Tributos:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="402.0" layoutY="503.0" text="Importe Total:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="601.0" layoutY="366.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="601.0" layoutY="392.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="601.0" layoutY="418.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="601.0" layoutY="444.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="601.0" layoutY="471.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="601.0" layoutY="498.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextArea editable="false" layoutX="72.0" layoutY="425.0" prefHeight="95.0" prefWidth="303.0" AnchorPane.bottomAnchor="2.0" AnchorPane.topAnchor="425.0" />
-                  <Label layoutX="12.0" layoutY="405.0" text="Observación:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <TextField editable="false" layoutX="133.0" layoutY="376.0" prefHeight="13.0" prefWidth="120.0" />
+                  <TextField editable="false" layoutX="133.0" layoutY="413.0" prefHeight="13.0" prefWidth="120.0" />
+                  <TextField editable="false" layoutX="522.0" layoutY="372.0" prefHeight="13.0" prefWidth="120.0" />
+                  <TextField editable="false" layoutX="522.0" layoutY="413.0" prefHeight="13.0" prefWidth="120.0" />
+                  <TitledPane animated="false" collapsible="false" layoutX="12.0" layoutY="24.0" prefHeight="162.0" prefWidth="727.0" text="Información General">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
+                           <children>
+                              <AnchorPane fx:id="pedidoForm" prefHeight="135.0" prefWidth="764.0">
+                                 <children>
+                                    <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="323.0" layoutY="53.0" text="Fecha:">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="15.0" layoutY="52.0" text="Moneda:">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="nombre_cliente" layoutX="140.0" layoutY="13.0" prefHeight="25.0" prefWidth="154.0" />
+                                    <Label fx:id="VerDocumentoLabel" layoutX="323.0" layoutY="16.0" text="DNI:">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="dni_cliente" layoutX="378.0" layoutY="14.0" prefHeight="25.0" prefWidth="120.0" />
+                                    <DatePicker fx:id="fecha_emision" layoutX="382.0" layoutY="51.0" prefHeight="25.0" prefWidth="120.0" />
+                                    <ComboBox fx:id="ver_moneda" layoutX="140.0" layoutY="50.0" prefHeight="25.0" prefWidth="153.0" />
+                                    <Label fx:id="VerDocumentoLabel1" layoutX="524.0" layoutY="17.0" text="RUC">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="ruc_cliente" layoutX="578.0" layoutY="15.0" prefHeight="25.0" prefWidth="96.0" />
+                                    <Label layoutX="15.0" layoutY="97.0" text="Guia de Remision">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="guia_remision_busqueda" layoutX="140.0" layoutY="95.0" prefHeight="25.0" prefWidth="154.0" />
+                                    <Button fx:id="buscar_guia_remision" layoutX="323.0" layoutY="96.0" mnemonicParsing="false" onAction="#agregar_guia_remision" prefHeight="20.0" prefWidth="20.0" text="+">
+                                       <font>
+                                          <Font size="10.0" />
+                                       </font>
+                                    </Button>
+                                    <Label fx:id="VerDocumentoLabel11" layoutX="524.0" layoutY="52.0" text="Codigo">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="codigo_venta" layoutX="578.0" layoutY="50.0" prefHeight="25.0" prefWidth="96.0" />
+                                 </children>
+                              </AnchorPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
                </children>
             </AnchorPane>
          </children>
