--- a/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
+++ b/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
@@ -114,15 +114,15 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TableView layoutX="12.0" layoutY="192.0" prefHeight="162.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="192.0">
+                  <TableView fx:id="tabla_detalle" layoutX="12.0" layoutY="192.0" prefHeight="162.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="192.0">
                     <columns>
-                      <TableColumn prefWidth="86.0" text="Cantidad" />
-                        <TableColumn prefWidth="77.0" text="Código" />
-                        <TableColumn prefWidth="182.0" text="Descripción" />
-                        <TableColumn prefWidth="55.33331298828125" text="P.U." />
-                        <TableColumn prefWidth="97.66668701171875" text="Descuentos" />
-                        <TableColumn prefWidth="125.0" text="flete" />
-                        <TableColumn prefWidth="97.0" text="Subtotal" />
+                      <TableColumn fx:id="columna_cantidad" prefWidth="86.0" text="Cantidad" />
+                        <TableColumn fx:id="columna_codigo" prefWidth="77.0" text="Código" />
+                        <TableColumn fx:id="columna_descripcion" prefWidth="182.0" text="Descripción" />
+                        <TableColumn fx:id="columna_pu" prefWidth="55.33331298828125" text="P.U." />
+                        <TableColumn fx:id="columna_descuento" prefWidth="97.66668701171875" text="Descuentos" />
+                        <TableColumn fx:id="columna_flete" prefWidth="125.0" text="flete" />
+                        <TableColumn fx:id="columna_subtotal" prefWidth="97.0" text="Subtotal" />
                     </columns>
                   </TableView>
                   <Label layoutX="12.0" layoutY="374.0" text="SubTotal Ventas:">
@@ -130,25 +130,19 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="12.0" layoutY="415.0" text="Valor Venta:">
+                  <Label layoutX="364.0" layoutY="374.0" text="IGV">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="374.0" text="IGV">
+                  <Label layoutX="13.0" layoutY="423.0" text="Importe Total:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="402.0" layoutY="415.0" text="Importe Total:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="133.0" layoutY="376.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="133.0" layoutY="413.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="522.0" layoutY="372.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextField editable="false" layoutX="522.0" layoutY="413.0" prefHeight="13.0" prefWidth="120.0" />
+                  <TextField fx:id="subtotal" editable="false" layoutX="133.0" layoutY="376.0" prefHeight="25.0" prefWidth="178.0" />
+                  <TextField fx:id="igv_total" editable="false" layoutX="423.0" layoutY="372.0" prefHeight="25.0" prefWidth="163.0" />
+                  <TextField fx:id="importe_total" editable="false" layoutX="133.0" layoutY="421.0" prefHeight="25.0" prefWidth="178.0" />
                   <TitledPane animated="false" collapsible="false" layoutX="12.0" layoutY="24.0" prefHeight="162.0" prefWidth="727.0" text="Información General">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
