--- a/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
+++ b/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -33,55 +32,36 @@
             <AnchorPane layoutX="40.0" layoutY="84.0" prefHeight="252.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
                   <TextField layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Button layoutX="176.0" layoutY="225.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <Button layoutX="176.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
                   <Label layoutX="12.0" layoutY="30.0" prefHeight="21.0" prefWidth="114.0" text="R.U.C.:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox layoutX="130.0" layoutY="196.0" prefHeight="25.0" prefWidth="106.0" />
                   <TextField layoutX="130.0" layoutY="28.0" prefHeight="25.0" prefWidth="106.0" />
                   <Label layoutX="12.0" layoutY="64.0" prefHeight="21.0" prefWidth="114.0" text="D.N.I.:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="12.0" layoutY="198.0" text="Documento:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="12.0" layoutY="98.0" prefHeight="21.0" prefWidth="114.0" text="Señor(es):">
+                  <Label layoutX="12.0" layoutY="98.0" prefHeight="21.0" prefWidth="114.0" text="Cliente">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
                   <TextField layoutX="130.0" layoutY="96.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Label layoutX="12.0" layoutY="131.0" prefHeight="21.0" prefWidth="114.0" text="Fecha:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker layoutX="128.0" layoutY="128.0" prefHeight="25.0" prefWidth="107.0" />
-                  <Label layoutX="12.0" layoutY="170.0" prefHeight="21.0" prefWidth="114.0" text="Fecha Fin:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker layoutX="128.0" layoutY="167.0" prefHeight="25.0" prefWidth="107.0" />
-                  <CheckBox layoutX="12.0" layoutY="153.0" mnemonicParsing="false" text="Entre" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="29.0" layoutY="342.0" prefHeight="270.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="302.0">
+            <AnchorPane layoutX="29.0" layoutY="220.0" prefHeight="352.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="220.0">
                <children>
-                  <TableView layoutX="12.0" layoutY="25.0" prefHeight="202.0" prefWidth="225.0">
+                  <TableView fx:id="tabla_ventas" layoutX="12.0" layoutY="25.0" prefHeight="269.0" prefWidth="225.0">
                      <columns>
-                        <TableColumn prefWidth="64.0" text="Fecha" />
-                        <TableColumn prefWidth="74.66665649414062" text="R.U.C/D.N.I" />
-                        <TableColumn prefWidth="85.0" text="Importe" />
+                        <TableColumn fx:id="ventas_codigo" prefWidth="64.0" text="Codigo" />
+                        <TableColumn fx:id="ventas_cliente" prefWidth="74.66665649414062" text="Cliente" />
+                        <TableColumn fx:id="ventas_fecha" prefWidth="85.0" text="Fecha Emision" />
                      </columns>
                   </TableView>
-                  <Button layoutX="140.0" layoutY="244.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <Button layoutX="141.0" layoutY="305.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
                </children>
             </AnchorPane>
          </children>
@@ -89,7 +69,7 @@
             <Insets />
          </opaqueInsets>
       </AnchorPane>
-      <AnchorPane layoutX="313.0" layoutY="63.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="formulario" layoutX="313.0" layoutY="63.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="749.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
