--- a/src/main/java/fxml/ContenidoPrincipal.fxml
+++ b/src/main/java/fxml/ContenidoPrincipal.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/styles/maincontent.css" />
     </stylesheets>
@@ -40,79 +38,7 @@
             <HBox prefHeight="79.0" prefWidth="1200.0">
                <children>
                   <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" />
-                  <AnchorPane prefHeight="81.0" prefWidth="900.0">
-                     <children>
-                        <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
-                        <Button layoutX="62.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="59.0" prefWidth="0.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/email_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Correo" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="147.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/print_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Imprimir" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="231.0" layoutY="11.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/reload_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Recargar" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="319.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/help_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Ayuda" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                     </children>
-                  </AnchorPane>
+                  <AnchorPane minHeight="89.0" prefHeight="81.0" prefWidth="900.0" />
                </children>
             </HBox>
             <HBox prefHeight="572.0" prefWidth="1200.0">
