--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
@@ -97,12 +97,24 @@
                   </TableView>
                   <TitledPane animated="false" collapsible="false" layoutX="564.0" layoutY="50.0" minHeight="-Infinity" prefHeight="246.0" prefWidth="163.0" text="Acciones" AnchorPane.bottomAnchor="5.0">
                      <content>
-                        <AnchorPane prefHeight="251.0" prefWidth="158.0">
+                        <AnchorPane prefWidth="158.0">
                            <children>
-                              <Button layoutX="61.0" layoutY="39.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="39.0" />
-                              <Button layoutX="61.0" layoutY="140.0" mnemonicParsing="false" onAction="#eliminar_envio" prefHeight="40.0" prefWidth="40.0" text="X" />
-                              <Label layoutX="42.0" layoutY="100.0" text="Agregar Envio" />
-                              <Label layoutX="46.0" layoutY="194.0" text="Eliminar Envio" />
+                              <Button contentDisplay="TOP" layoutX="27.0" layoutY="14.0" mnemonicParsing="false" onAction="#agregar_envio" prefWidth="125.0" text="Agregar Envio" AnchorPane.topAnchor="14.0">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../Imagenes/plus_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
+                              <Button contentDisplay="TOP" layoutX="27.0" layoutY="118.0" mnemonicParsing="false" onAction="#eliminar_envio" prefWidth="125.0" text="Eliminar Envio">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../Imagenes/delete_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
                            </children>
                         </AnchorPane>
                      </content>
@@ -127,11 +139,11 @@
                   <TextField fx:id="codigo_salida" layoutX="305.0" layoutY="10.0" prefHeight="25.0" prefWidth="87.0" />
                </children>
             </AnchorPane>
-            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="192.0" prefWidth="737.0" text="Informacion del envio">
+            <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="61.0" prefHeight="200.0" prefWidth="724.0" text="Informacion del envio">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="185.0" prefWidth="735.0">
                      <children>
-                        <TableView fx:id="tabla_productos" layoutX="14.0" layoutY="32.0" prefHeight="123.0" prefWidth="539.0">
+                        <TableView fx:id="tabla_productos" layoutX="14.0" layoutY="32.0" prefHeight="133.0" prefWidth="539.0">
                           <columns>
                             <TableColumn fx:id="envio_cod_producto" prefWidth="132.0" text="Código" />
                             <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="135.0" text="Nombre" />
@@ -143,15 +155,15 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Button fx:id="buscar_envio_button" layoutX="570.0" layoutY="10.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                        <Button fx:id="buscar_envio_button" layoutX="569.0" layoutY="137.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Label layoutX="571.0" layoutY="45.0" text="Código Envio" />
-                        <Label layoutX="567.0" layoutY="100.0" text="Código Pedido" />
-                        <TextField fx:id="envio_dato" layoutX="569.0" layoutY="69.0" />
-                        <TextField fx:id="pedido_dato" layoutX="568.0" layoutY="125.0" />
+                        <Label layoutX="571.0" layoutY="25.0" text="Código Envio" />
+                        <Label layoutX="567.0" layoutY="80.0" text="Código Pedido" />
+                        <TextField fx:id="envio_dato" layoutX="568.0" layoutY="49.0" prefHeight="27.0" prefWidth="150.0" />
+                        <TextField fx:id="pedido_dato" layoutX="567.0" layoutY="99.0" prefHeight="27.0" prefWidth="150.0" />
                      </children>
                   </AnchorPane>
                </content>
