--- a/src/main/java/fxml/Materiales/Productos/MoverARack.fxml
+++ b/src/main/java/fxml/Materiales/Productos/MoverARack.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
    <children>
       <AnchorPane id="AnchorPane" layoutX="2.0" prefHeight="400.0" prefWidth="550.0">
          <children>
@@ -32,17 +31,17 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="69.0" text="Alto">
+                  <Label layoutX="14.0" layoutY="79.0" text="Alto:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="204.0" layoutY="42.0" text="Almacén">
+                  <Label layoutX="204.0" layoutY="42.0" text="Almacén:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="204.0" layoutY="71.0" text="Largo">
+                  <Label layoutX="204.0" layoutY="81.0" text="Largo:">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -53,19 +52,19 @@
                      </font>
                   </Label>
                   <TextField layoutX="100.0" layoutY="40.0" prefHeight="25.0" prefWidth="70.0" />
-                  <TextField layoutX="100.0" layoutY="67.0" prefHeight="25.0" prefWidth="70.0" />
+                  <TextField layoutX="100.0" layoutY="77.0" prefHeight="25.0" prefWidth="70.0" />
                   <ComboBox layoutX="270.0" layoutY="40.0" prefHeight="25.0" prefWidth="213.0" />
                   <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
-                  <TextField layoutX="270.0" layoutY="67.0" prefHeight="25.0" prefWidth="70.0" />
-                  <Label layoutX="357.0" layoutY="71.0" text="Ancho">
+                  <TextField layoutX="270.0" layoutY="77.0" prefHeight="25.0" prefWidth="70.0" />
+                  <Label layoutX="357.0" layoutY="81.0" text="Ancho:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="413.0" layoutY="69.0" prefHeight="25.0" prefWidth="70.0" />
+                  <TextField layoutX="413.0" layoutY="79.0" prefHeight="25.0" prefWidth="70.0" />
                </children>
             </AnchorPane>
-            <Button layoutX="460.0" layoutY="125.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+            <Button layoutX="431.0" layoutY="125.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Buscar" />
             <Label layoutX="37.0" layoutY="299.0" text="Cantidad">
                <font>
                   <Font size="14.0" />
@@ -78,7 +77,7 @@
             </Label>
             <TextField layoutX="138.0" layoutY="295.0" prefHeight="20.0" prefWidth="111.0" />
             <ComboBox layoutX="393.0" layoutY="295.0" prefHeight="25.0" prefWidth="126.0" />
-            <Button layoutX="459.0" layoutY="342.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Mover" />
+            <Button layoutX="430.0" layoutY="342.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Mover" />
          </children>
       </AnchorPane>
    </children>
